--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             background: url('cookie.png') no-repeat center center;
             background-size: contain;
             cursor: pointer;
+            margin: 20px 0;
+            border: 5px solid #000; /* Add border to the cookie image */
+            border-radius: 50%; /* Make the border round to match the cookie shape */
         }
         #upgrade {
             margin-top: 20px;
@@ -23,6 +26,14 @@
             color: white;
             font-size: 18px;
             cursor: pointer;
+            border: 3px solid #000; /* Add border to the upgrade button */
+            border-radius: 5px;
+            display: inline-block;
+            text-align: center;
+            transition: background-color 0.3s ease; /* Add smooth hover effect */
+        }
+        #upgrade:hover {
+            background-color: #e76f51; /* Change button color on hover */
         }
     </style>
 </head>
