Update index.html to original version

--- a/index.html
+++ b/index.html
@@ -1,97 +1,83 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie Clicker</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        #cookie {
-            width: 200px;
-            height: 200px;
-            background: url('cookie.png') no-repeat center center;
-            background-size: contain;
-            cursor: pointer;
-            margin: 20px 0;
-            border: 5px solid #000; /* Add border to the cookie image */
-            border-radius: 50%; /* Make the border round to match the cookie shape */
-        }
-        #upgrade {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #f4a261;
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
-            border: 3px solid #000; /* Add border to the upgrade button */
-            border-radius: 5px;
-            display: inline-block;
-            text-align: center;
-            transition: background-color 0.3s ease; /* Add smooth hover effect */
-        }
-        #upgrade:hover {
-            background-color: #e76f51; /* Change button color on hover */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cookie Clicker Lite</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+      background: #f9f9f9;
+    }
+
+    button {
+      padding: 15px 30px;
+      font-size: 18px;
+      margin: 10px;
+      width: 80%;
+      max-width: 300px;
+      border-radius: 10px;
+      border: none;
+      background: #ffcc00;
+      color: #333;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 22px;
+    }
+
+    .upgrade {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Cookie Clicker</h1>
-    <div id="cookie"></div>
-    <p>Cookies: <span id="cookies">0</span></p>
-    <p>Cookies per second (CPS): <span id="cps">0</span></p>
-    <button id="upgrade">Buy Upgrade (Cost: 10 cookies)</button>
 
-    <!-- Add audio files in .wav format -->
-    <audio id="clickSound" src="click-sound.wav"></audio>
-    <audio id="upgradeSound" src="upgrade-sound.wav"></audio>
+  <h1>🍪 Cookie Clicker Lite</h1>
+  <h2 id="cookie-count">Cookies: 0</h2>
 
-    <script>
-        let cookies = 0;
-        let cps = 0;
-        let upgradeCost = 10;
+  <button onclick="earnCookies()">Click Me!</button>
 
-        // Get elements
-        const cookiesElement = document.getElementById("cookies");
-        const cpsElement = document.getElementById("cps");
-        const cookieElement = document.getElementById("cookie");
-        const upgradeButton = document.getElementById("upgrade");
+  <div class="upgrade">
+    <button onclick="buyUpgrade()">Buy Upgrade (Cost: <span id="upgrade-cost">10</span>)</button>
+    <p>Cookies per click: <span id="cookies-per-click">1</span></p>
+  </div>
 
-        // Get sound elements
-        const clickSound = document.getElementById("clickSound");
-        const upgradeSound = document.getElementById("upgradeSound");
+  <script>
+    let cookies = 0;
+    let cookiesPerClick = 1;
+    let upgradeCost = 10;
 
-        // Function to update the cookies and cps on the page
-        function updateDisplay() {
-            cookiesElement.textContent = cookies;
-            cpsElement.textContent = cps;
-        }
+    function earnCookies() {
+      cookies += cookiesPerClick;
+      updateDisplay();
+    }
 
-        // Click event for the cookie
-        cookieElement.addEventListener("click", function() {
-            cookies += 1;  // Each click gives one cookie
-            clickSound.play();  // Play the click sound
-            updateDisplay();
-        });
+    function buyUpgrade() {
+      if (cookies >= upgradeCost) {
+        cookies -= upgradeCost;
+        cookiesPerClick += 1;
+        upgradeCost = Math.floor(upgradeCost * 1.5);
+        updateDisplay();
+      }
+    }
 
-        // Upgrade event
-        upgradeButton.addEventListener("click", function() {
-            if (cookies >= upgradeCost) {
-                cookies -= upgradeCost;
-                cps += 1;
-                upgradeCost = Math.floor(upgradeCost * 1.5); // Increase upgrade cost
-                upgradeSound.play();  // Play the upgrade sound
-                updateDisplay();
-            }
-        });
+    function updateDisplay() {
+      document.getElementById('cookie-count').textContent = `Cookies: ${cookies}`;
+      document.getElementById('cookies-per-click').textContent = cookiesPerClick;
+      document.getElementById('upgrade-cost').textContent = upgradeCost;
+    }
+  </script>
 
-        // Auto collect cookies per second (CPS)
-        setInterval(function() {
-            cookies += cps;
-            updateDisplay();
-        }, 1000); // Collect cookies every second
-    </script>
 </body>
 </html>
