Update index.html to correct total cookies

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     // Function to earn cookies on each click
     function earnCookies() {
       cookies += cookiesPerClick;
-      totalCookies = totalCookies + cookies;  // Increment total cookies on each click
+      totalCookies = totalCookies + cookiesPerClick;  // Increment total cookies on each click
       updateDisplay();
     }
 
