--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <p>Cookies per click: <span id="cookies-per-click">1</span></p>
   </div>
 
+  <!-- Sound elements -->
+  <audio id="click-sound" src="click-sound.wav" preload="auto"></audio>
+  <audio id="upgrade-sound" src="upgrade-sound.wav" preload="auto"></audio>
+  
   <script>
     let cookies = 0;
     let totalCookies = 0;  // Variable to track the total cookies clicked
