--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cookie Clicker Lite</title>
   <style>
     body {
@@ -38,19 +38,12 @@
     .upgrade {
       margin-top: 20px;
     }
-
-    #total-cookies {
-      font-size: 20px;
-      margin-top: 20px;
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
 
   <h1>🍪 Cookie Clicker Lite</h1>
   <h2 id="cookie-count">Cookies: 0</h2>
-  <h2 id="total-cookies">Total Cookies: 0</h2>
 
   <button onclick="earnCookies()">Click Me!</button>
 
@@ -62,34 +55,35 @@
   <!-- Sound elements -->
   <audio id="click-sound" src="click-sound.wav" preload="auto"></audio>
   <audio id="upgrade-sound" src="upgrade-sound.wav" preload="auto"></audio>
-  
+
   <script>
     let cookies = 0;
-    let totalCookies = 0;  // Variable to track the total cookies clicked
     let cookiesPerClick = 1;
     let upgradeCost = 10;
 
-    // Function to earn cookies on each click
+    const clickSound = document.getElementById("click-sound");
+    const upgradeSound = document.getElementById("upgrade-sound");
+
     function earnCookies() {
       cookies += cookiesPerClick;
-      totalCookies = totalCookies + cookiesPerClick;  // Increment total cookies on each click
+      clickSound.currentTime = 0;
+      clickSound.play();
       updateDisplay();
     }
 
-    // Function to buy an upgrade
     function buyUpgrade() {
       if (cookies >= upgradeCost) {
         cookies -= upgradeCost;
         cookiesPerClick += 1;
         upgradeCost = Math.floor(upgradeCost * 1.5);
+        upgradeSound.currentTime = 0;
+        upgradeSound.play();
         updateDisplay();
       }
     }
 
-    // Function to update the display
     function updateDisplay() {
       document.getElementById('cookie-count').textContent = `Cookies: ${cookies}`;
-      document.getElementById('total-cookies').textContent = `Total Cookies: ${totalCookies}`;
       document.getElementById('cookies-per-click').textContent = cookiesPerClick;
       document.getElementById('upgrade-cost').textContent = upgradeCost;
     }
